# eff_lib

./: Cargo.toml  LICENSE  README.md
eff_data/: Cargo.toml  README.md
eff_data/src/: lib.rs
eff_data_json/: Cargo.toml
eff_data_json/src/: main.rs
eff_lib/: Cargo.toml  README.md
eff_lib/src/: lib.rs  string.rs
eff_lib_json/: Cargo.toml
eff_lib_json/src/: main.rs
