[package]
name = "eff_lib"
version = "0.1.0"
authors = ["ThatNintendoNerd"]
edition = "2021"
description = "Reading and writing EFF files"
documentation = "https://docs.rs/eff_lib"
repository = "https://github.com/ultimate-research/eff_lib"
license = "MIT"

[dependencies]
binrw = "0.12.0"
modular-bitfield = "0.11.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
